--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!Doctype html/>
 <html>
 <head>
 	<title>Project Golu</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<div>
+    <div>
 	   <form class="form">
 	   	 <label class="form-label" for="form-input">Search:</label>
 	   	 <input class="form-input" type="text" id="form-link-input"></input>
@@ -16,9 +16,9 @@
   		 </select>
        </form>
 	</div>
-	
 	<ul></ul>
 
+	<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="app.js"></script>
 </body>
