some more edits

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <div>
 	   <form class="form">
 	   	 <label class="form-label" for="form-input">Search:</label>
-	   	 <input class="form-input" type="text" id="form-link-input"></input>
+	   	 <input class="form-input" type="text" id="form-input"></input>
 	   	 <label class="form-label1" for="form-input1">Sort by:</label>
-	   	 <select name="">
+	   	 <select name="drop-down">
     		<option value="Newest">Newest</option>
     		<option value="Alphabetical">Alphabetical</option>
   		 </select>
