some more edits

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <div>
 	   <form class="form">
 	   	 <label class="form-label" for="form-input">Search:</label>
-	   	 <input class="form-input" type="text" id="form-input"></input>
+	   	 <input class="form-input" type="text" id="form-input" value=""></input>
 	   	 <label class="form-label1" for="form-input1">Sort by:</label>
-	   	 <select name="drop-down">
-    		<option value="Newest">Newest</option>
-    		<option value="Alphabetical">Alphabetical</option>
+	   	 <select name="drop-down" class="drop-down">
+    		<option value="Newest" class="new">Newest</option>
+    		<option value="Alphabetical" class="sort">Alphabetical</option>
   		 </select>
        </form>
 	</div>
